change to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Turn Based RPG</title>
+        <title>Twin Dragons of Time</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <script src="js/phaser.min.js"></script>
@@ -19,5 +19,6 @@
     </head>
     <body>
         <div id="content" style="display: block; width: 100%; text-align: center"></div>
+        <div id="header"></div>
     </body>
 </html>
