added fonts and styling

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Twin Dragons of Time</title>
+        <title>Forest of Dragons</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <script src="js/phaser.min.js"></script>
         <script src="js/world.js"></script>
@@ -18,7 +19,7 @@
     </style>
     </head>
     <body>
-        <div id="content" style="display: block; width: 100%; text-align: center"></div>
-        <div id="header"></div>
+        <div id="content"></div>
+        <div id="header">Forest of Dragons: A turn-based RPG</div>
     </body>
 </html>
