--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-        <script src="js/phaser.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script>
         <script src="js/world.js"></script>
         <script src="js/battle.js"></script>
         <script src="js/start.js"></script>
